feat: manage federation domain blocks
